force-app/main/default/objects/Account/fields/DX_Testing__c.field-meta.xml
<CustomField>
    <fullName>DX_Testing__c</fullName>
    <label>DX Testing</label>
    <length>95</length>
    <type>Text</type>
</CustomField>