force-app/main/default/objects/Account/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Updating for test on PR</description>
    <label>Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>