force-app/main/default/objects/Account/fields/TestingPurpose__c.field-meta.xml
<CustomField>
    <fullName>TestingPurpose__c</fullName>
    <label>TestingPurpose</label>
    <length>95</length>
    <type>Text</type>
</CustomField>