force-app/main/default/objects/Account/validationRules/Testing_Validation_rules_deletion.validationRule-meta.xml
<ValidationRule>
    <fullName>Testing_Validation_rules_deletion</fullName>
    <active>true</active>
    <errorConditionFormula>NumberOfEmployees &gt; 100</errorConditionFormula>
    <errorMessage>More than 100 Employees</errorMessage>
</ValidationRule>