force-app/main/default/objects/Account/validationRules/Testing_Validation_rules_deletion2.validationRule-meta.xml
<ValidationRule>
    <fullName>Testing_Validation_rules_deletion2</fullName>
    <active>true</active>
    <errorConditionFormula>Len(AccountNumber)  != 8</errorConditionFormula>
    <errorMessage>Account number must be 8 characters long</errorMessage>
</ValidationRule>